chore: adds swagger docs
